--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,4 @@ fastapi==0.115.0
 uvicorn[standard]==0.30.6
 pytest==8.3.3
 httpx==0.27.2
-scipy==1.13.1
+# scipy==1.13.1  # Optional - commented out to avoid build issues. Install separately if needed.
